Fix: Responsive layout issues

--- a/html-export/css/footer.css
+++ b/html-export/css/footer.css
@@ -390,10 +390,10 @@
   width: 100vw;
   min-height: 40px;
   background: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
+  margin-top: 40px;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
   z-index: 7;
   flex-wrap: wrap;
 }
@@ -402,10 +402,9 @@
   .footer-bottom {
     min-height: 50px;
     padding: 10px 20px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
   }
 }
 
@@ -429,10 +428,9 @@
   .footer-bottom {
     min-height: 48px;
     padding: 12px 20px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
   }
   
   .footer-bottom-text {
