--- a/html-export/css/main.css
+++ b/html-export/css/main.css
@@ -83,13 +83,15 @@ img {
   }
   
   .hero-title {
-    font-size: 48px;
+    font-size: 48px !important;
     max-width: 800px;
+    width: auto;
   }
   
   .hero-subtitle {
-    font-size: 20px;
+    font-size: 20px !important;
     max-width: 800px;
+    width: auto;
   }
 }
 
@@ -107,14 +109,16 @@ img {
   }
   
   .hero-title {
-    font-size: 38px;
+    font-size: 38px !important;
     max-width: 600px;
+    width: auto;
     top: 80px;
   }
   
   .hero-subtitle {
-    font-size: 18px;
+    font-size: 18px !important;
     max-width: 600px;
+    width: auto;
     top: 95px;
   }
   
